--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,9 @@ nav{
     justify-content: space-between;
 }
 
+
+
+/* Main */
 .text-content{
     width: 60%;
     margin: auto;
@@ -102,17 +105,19 @@ button{
     text-align: center;
 }
 
-.download{
+.download, .registrati{
     background-color: lightblue;
     color: white;
 }
 
-h3{
+#adventure{
     background-image: url(../img/stars.svg);
     background-position: center;
     background-size: contain;
 }
 
+
+/* Footer */
 footer{
     background-color: #24272A;
 }
@@ -121,16 +126,44 @@ footer{
     display: flex;
     width: 80%;
     margin: auto;
-    height: 600px;
     justify-content: space-between;
+    padding-top: 80px;
 }
 
 .col{
     width: calc(100%/5);
 }
 
+.ft-h2, .ft-h3{
+    color: violet;
+    font-size: 25px;
+}
+
+.ft-h2{
+    padding-bottom: 20px;
+}
+
 .col-1{
-    width: 500px;
+    width: 300px;
+}
+
+.italia{
+    height: 1rem;
+}
+
+#lingua::after{
+    content: '\2228';
+}
+
+#lingua{
+    color: white;
+    padding: 0 10px;
+}
+
+.col > div{
+    color: white;
+    font-size: 20px;
+    line-height: 2;
 }
 
 .piè{
@@ -139,12 +172,5 @@ footer{
     margin: auto;
     display: flex;
     justify-content: space-between;
-    background-color: black;
+    padding: 40px 0;
 }
-
-.piè > *{
-    height: 100px;
-    width: 200px;
-    background-color: maroon;
-}
-
