--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
+    font-family: 'Roboto', sans-serif;}
 
 header{
     background-image: url(../img/jumbo.png);
@@ -49,6 +49,7 @@ nav{
 
 h1{
     font-size: 50px;
+    font: bold;
 }
 
 button{
@@ -77,8 +78,15 @@ button{
     font-size: 30px;
 }
 
-.bg-wave{
-    background-color: #F6F6F6;
+/* .bg-lg{
+    background-color: lightgray;
+} */
+
+.bg-lg{
+    background-image: url(../img/wave.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .immagine, .text{
@@ -90,15 +98,12 @@ button{
     order: -1;
 }
 
-.tech{
-    font-size: 30px;
-}
-
 .tech > *{
     width: 80%;
     margin: auto;
     padding-bottom: 100px;
     padding-top: 100px;
+    font-size: 30px;
 }
 
 .tecnologia{
@@ -139,12 +144,12 @@ footer{
     font-size: 25px;
 }
 
-.ft-h2{
-    padding-bottom: 20px;
+h2, h3{
+    padding-bottom: 30px;
 }
 
 .col-1{
-    width: 300px;
+    width: 400px;
 }
 
 .italia{
@@ -158,6 +163,11 @@ footer{
 #lingua{
     color: white;
     padding: 0 10px;
+}
+
+i{
+    padding-right: 20px;
+    padding-top: 20px;
 }
 
 .col > div{
@@ -174,3 +184,4 @@ footer{
     justify-content: space-between;
     padding: 40px 0;
 }
+
