--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,7 @@ nav{
     justify-content: space-between;
     padding-top: 40px;
     font-size: 20px;
+    align-items: center;
 }
 
 .logo{
@@ -79,10 +80,7 @@ button{
 }
 
 .bg-lg{
-    background-image: url(../img/wave.svg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-color: lightgray;
 }
 
 /* background-image: url(../img/wave.svg);
@@ -102,12 +100,12 @@ button{
 .tech > *{
     width: 80%;
     margin: auto;
-    padding-bottom: 100px;
-    padding-top: 100px;
+    padding-bottom: 50px;
+    padding-top: 50px;
     font-size: 30px;
 }
 
-.tecnologia{
+.tecnologia , .scaricamento{
     text-align: center;
 }
 
@@ -118,9 +116,13 @@ button{
 
 #adventure{
     background-image: url(../img/stars.svg);
-    background-position: center;
+    background-position: top;
     background-size: contain;
+    background-repeat: no-repeat;
+    padding-top: 50px;
+    display: inline-block;
 }
+
 
 
 /* Footer */
